BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/RequestWrongFormat.java
package com.example.demo.error;

public class RequestWrongFormat  extends RuntimeException {
	public RequestWrongFormat() {
		super("request wrong format");
	}
}
